--- a/dvc.yaml
+++ b/dvc.yaml
@@ -121,7 +121,7 @@ stages:
   #   outs:
   #   - ${paths.raw_data}/psam_p.csv.bz2
   download_puma_shapefiles:
-    cmd: "wget --no-check-certificate --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' -P ${paths.raw_data} -nH --recursive -np https://www2.census.gov/geo/tiger/TIGER2024/PUMA20/ && /bin/bash -c ${paths.source_dir}/puma_shape_files.sh && python ${paths.source_dir}/concatenate_puma_shape_files.py"
+    cmd: "wget --no-check-certificate -e robots=off -w 3 --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' -P ${paths.raw_data} -nH --recursive -np https://www2.census.gov/geo/tiger/TIGER2024/PUMA20/ && /bin/bash -c ${paths.source_dir}/puma_shape_files.sh && python ${paths.source_dir}/concatenate_puma_shape_files.py"
     outs:
     - ${paths.raw_data}/puma_combined.shp
   state_boundaries:
