--- a/packages/nmetl/src/nmetl/config/config.toml
+++ b/packages/nmetl/src/nmetl/config/config.toml
@@ -7,11 +7,11 @@ LOGGING_LEVEL = "WARNING"
 BLOOM_FILTER_SIZE = 1_000_000
 ETCD3_RETRY_DELAY = 3.0
 BLOOM_FILTER_ERROR_RATE = 0.01
+DATA_SOURCE_HIGH_WATER_MARK = 64_000
+DATA_SOURCE_LOW_WATER_MARK = 32
 DEFAULT_QUEUE_SIZE = 64
 RAW_INPUT_QUEUE_SIZE = 64_000_000_000
 FACT_GENERATED_QUEUE_SIZE = 64_000_000_000
 CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 64_000_000_000
 TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 64_000_000_000
-DUMP_PROFILE_INTERVAL = 25
-PROFILER = false
-CLEAR_DB_ON_START = true
+CLEAR_DB_ON_START = false
