--- a/packages/nmetl/src/nmetl/config/config.toml
+++ b/packages/nmetl/src/nmetl/config/config.toml
@@ -10,8 +10,8 @@ BLOOM_FILTER_ERROR_RATE = 0.01
 DATA_SOURCE_HIGH_WATER_MARK = 64_000
 DATA_SOURCE_LOW_WATER_MARK = 32
 DEFAULT_QUEUE_SIZE = 64
-RAW_INPUT_QUEUE_SIZE = 64_000_000_000
-FACT_GENERATED_QUEUE_SIZE = 64_000_000_000
-CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 64_000_000_000
-TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 64_000_000_000
+RAW_INPUT_QUEUE_SIZE = 64_000
+FACT_GENERATED_QUEUE_SIZE = 64_000
+CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 64_000
+TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 64_000
 CLEAR_DB_ON_START = false
