--- a/packages/pycypher/pyproject.toml
+++ b/packages/pycypher/pyproject.toml
@@ -31,6 +31,7 @@ Homepage = "https://github.com/zacernst/pycypher-nmetl"
 
 [project.scripts]
 pycypher = "pycypher.cli:main"
+fdbls = "pycypher.fdbls:go"
 
 [tool.ruff]
 exclude = [ ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",]
