--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
+    "python.analysis.extraPaths": [".venv/lib/python3.13/site-packages"]
 }
