--- a/packages/fastopendata/pyproject.toml
+++ b/packages/fastopendata/pyproject.toml
@@ -64,7 +64,7 @@ Homepage = "https://github.com/zacernst/pycypher-nmetl"
 [project.scripts]
 
 [tool.ruff]
-exclude = [ ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",]
+exclude = [ "ingest.py", ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",]
 line-length = 79
 indent-width = 4
 target-version = "py313"
