--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "snakeviz>=2.2.2",
     "rocksdict>=0.3.25",
     "pandas>=2.2.3",
-    "dask[distributed]>=2025.4.0",
+    "dask[all,complete,dill,distributed]>=2025.4.0",
     "pylint>=3.3.6",
     "pyarrow>=19.0.1",
     "rich>=13.9.4",
@@ -53,6 +53,10 @@ dependencies = [
     "networkx>=3.4.2",
     "pyrefly>=0.18.0",
     "mypy>=1.16.0",
+    "frozendict>=2.4.6",
+    "pyzmq>=27.0.0",
+    "grafana-client>=4.3.2",
+    "pyroscope-io>=0.8.11",
 ]
 
 [[project.authors]]
@@ -123,6 +127,7 @@ exclude = [
     "site-packages",
     "venv",
 ]
+extend-exclude = ["packages/fastopendata/src/fastopendata/ingest.py"]
 
 [tool.ruff.lint]
 select = ["ALL"]
