--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Install uv
       run: curl -LsSf https://astral.sh/uv/install.sh | sh
     - name: Install dependencies and run tests
-      run: make tests
+      run: uv run make test
