--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pycypher-nmetl"
 version = "0.0.1"
 description = "Declarative ETL using Cypher queries"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13.0,<3.14.0"
 keywords = ["neo4j", "cypher", "etl", "declarative"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -40,7 +40,7 @@ dependencies = [
     "snakeviz>=2.2.2",
     "rocksdict>=0.3.25",
     "pandas>=2.2.3",
-    "dask[all,complete,dill,distributed]>=2025.4.0",
+    "dask[complete,distributed]>=2025.9.0",
     "pylint>=3.3.6",
     "pyarrow>=19.0.1",
     "rich>=13.9.4",
@@ -60,6 +60,7 @@ dependencies = [
     "redis>=6.2.0",
     "python-sat>=1.8.dev20",
     "orjson>=3.10.18",
+    "myst-parser>=4.0.1",
 ]
 
 [[project.authors]]
