--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pycypher-nmetl"
 version = "0.0.1"
 description = "Declarative ETL using Cypher queries"
 readme = "README.md"
-requires-python = ">=3.13.0,<3.14.0"
+requires-python = "==3.14.0a6+freethreaded"
 keywords = ["neo4j", "cypher", "etl", "declarative"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -38,9 +38,7 @@ dependencies = [
     "etcd3-py>=0.1.6",
     "rbloom>=1.5.2",
     "snakeviz>=2.2.2",
-    "rocksdict>=0.3.25",
     "pandas>=2.2.3",
-    "dask[complete,distributed]>=2025.9.0",
     "pylint>=3.3.6",
     "pyarrow>=19.0.1",
     "rich>=13.9.4",
@@ -49,7 +47,6 @@ dependencies = [
     "prometheus-client>=0.21.1",
     "bandit>=1.8.3",
     "ty>=0.0.1a6",
-    "geopandas>=1.1.0",
     "networkx>=3.4.2",
     "pyrefly>=0.18.0",
     "mypy>=1.16.0",
