--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ dependencies = [
     "pyarrow>=19.0.1",
     "rich>=13.9.4",
     "chardet>=5.2.0",
-    "dvc>=3.59.2",
+    # "dvc>=3.59.2",
     "prometheus-client>=0.21.1",
     "bandit>=1.8.3",
     "ty>=0.0.1a6",
@@ -51,12 +51,12 @@ dependencies = [
     "pyrefly>=0.18.0",
     "mypy>=1.16.0",
     "frozendict>=2.4.6",
-    "pyzmq>=27.0.0",
+    # "pyzmq>=27.0.0",
     "grafana-client>=4.3.2",
-    "pyroscope-io>=0.8.11",
-    "redis>=6.2.0",
+    # "pyroscope-io>=0.8.11",
+    # "redis>=6.2.0",
     "python-sat>=1.8.dev20",
-    "orjson>=3.10.18",
+    # "orjson>=3.10.18",
     "myst-parser>=4.0.1",
 ]
 
