--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   nmetl:
     platform: linux/aarch64
+    environment:
+      GITHUB_TOKEN=${GITHUB_TOKEN}
     build: .
       # ports:
       # - "8000:8000"
