configure fdb cluster file

--- a/packages/fastopendata/sample_session_config.toml
+++ b/packages/fastopendata/sample_session_config.toml
@@ -8,7 +8,7 @@ max_queue_size = 1000
 max_raw_data_queue_size = 16
 max_rows_per_data_source = inf
 buffer_timeout = 1.0
-foundationdb_cluster_file = "/app/fdb.cluster"
+foundationdb_cluster_file = "/pycypher-nmetl/fdb.cluster"
 prometheus_host = "prometheus"
 prometheus_port = 9090
 compute_mode = "thread"
