add fdb_build dependency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     volumes:
       - ./packages/fastopendata/raw_data:/pycypher-nmetl/packages/fastopendata/raw_data # Mounts the current directory as /app inside the container
       - ./packages/fastopendata/data_assets:/pycypher-nmetl/packages/fastopendata/data_assets # Mounts the current directory as /app inside the container
-    # depends_on:
-    #   - fdb_build
-    # network_mode: "service:fdb_build"
+    depends_on:
+      - fdb_build
+    network_mode: "service:fdb_build"
     # develop:
     #   watch:
     #     - action: sync
