--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 dependencies = [
     "graphviz>=0.21",
     "ibis-framework>=11.0.0",
+    "lark>=1.3.1",
     "osmium>=4.2.0",
     "pycosat>=0.6.6",
     "ty>=0.0.8",
